auth docs
