# backendlms/app/Http/Controllers/api/teacher/TeacherController.php
@@ -15,6 +15,42 @@ class TeacherController extends Controller
 {
 
     //list of teacher users
+
+     /**
+     * @OA\Get(
+     *      path="/teachers",
+     *      operationId="getUserList",
+     *      tags={"Teacher List"},
+     * 
+     *      summary="Get teacher list",
+     *      description="Returns all teacher",
+     * 
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *      ),
+     *  )
+     */
+
     public function index()
     {
         $teachers=User::whereRoleIs('teacher')->get();
@@ -23,6 +59,65 @@ class TeacherController extends Controller
 
 
     //create teacher
+
+    // student registration
+
+    /**
+     * @OA\Post(
+     ** path="/teachers",
+     *   tags={"Teacher Create"},
+     *   summary="create",
+     *   operationId="teacherRegister",
+     *
+     *  @OA\Parameter(
+     *      name="full_name",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *  @OA\Parameter(
+     *      name="email",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *  @OA\Parameter(
+     *      name="role",
+     *      in="query",
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=201,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *   @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *   )
+     *)
+     **/
+
     public function store(TeacherCreateRequest $request)
     {
         
